mainstyle.css
body {
font-family: Arial, Helvetica, sans-serif;
font-size: 2.5vmax;
color: #e0def4;
background-color: #191724; 
}
a {
color: #c4a7e7;
}
div {
margin:auto;
text-align:center;
}
h1 {
font-size: 1.7rem;
margin-top: 2vh;
}
.main {
width:100%;
}
.header {
padding-top: 2vh;
font-size: 2vmax;
text-align: center;
margin: 1.5vw;
}
.list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.flex-container {
width: auto;
flex-direction: column;
}
.kalendarz {
display: flex;
flex-direction: column;
justify-items: center;
margin: auto;
margin-bottom: 2vh;
min-height: 10vh;
height: auto;
/* border: 3px solid green; */
padding: 2vh 2vw;
}
.opis-kalendarza {
text-align: center;
margin: auto;
min-width: 40%;
min-height: 20vh;
line-height: 100%;
/* border: 3px solid green; */
padding: 1vw;
}
.przyciski-kalendarza {
display: flex;
flex-direction: row;
justify-content: center;
align-items: center;
margin: auto;
min-height: 10vh;
width: 90vw;
/* border: 3px solid green; */
padding: 1vw;
}

.button {
background-color: #26233a; 
font-size: 80%;
padding: 2vh 3vw;
text-align: center;
margin: 1vh 2vw;
transition-duration: 0.4s;
cursor: pointer;
width: 30%;
}


.button:hover {
background-color: #eb6f92;
}

@media (min-width: 15cm) {
div {
text-align:center;
}
body {
font-size: 2vmax;
padding: 50px 25px 50px 25px;
}
h1 {
font-size: 2em;
}
div {
width: 60%;
}
.main {
width: 70%;
margin: 0;
position: absolute;
top: 50%;
left: 50%;
transform: translate(-50%, -50%);
}
.header {
text-align: center;
margin: auto;
}
    .list {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }
    .flex-container {
    width: auto;
    flex-direction: column;
    }
    .kalendarz {
    display: flex;
    flex-direction: row;
    justify-items: center;
    margin: auto;
    margin-bottom: 3vh;
    min-height: 10vh;
    height: auto;
    /* border: 3px solid green; */
    padding: 3vh 2vw;
    }
    .opis-kalendarza {
    text-align: left;
    margin: auto;
    min-width: 40%;
    min-height: 20vh;
    
    line-height: 100%;
    /* border: 3px solid green; */
    padding: 1vw;
    }
    .przyciski-kalendarza {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: auto;
    min-height: 20vh;
    width: 25%;
    /* border: 3px solid green; */
    padding: 1vw;
    }
    
    .button {
    background-color: #26233a; 
    padding: 2vh 2vw;
    text-align: center;
    margin: 1vh 0vw;
    transition-duration: 0.4s;
    cursor: pointer;
    width: 100%;
    font-size: 100%;
    
    }
    
    





}
     

